# fastocc

./: .gitignore  Dockerfile  README.md  pyproject.toml
fastocc/: __init__.py  bam.py  fastocc.py  fragments.py  hdf5.py  io.py  nfr.py  np_utils.py  occupancy.py  options.py  range.py
test/: test_cli.py
test/data/: opts.json  reads.bam  reads.bam.bai  regions.bed
