[tool.poetry]
name = "fastocc"
version = "0.9.0"
description = "Fast nucleosome occupancy estimation from paired-end ATAC-seq data"
authors = ["Malcolm Perry <malcolm@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = ">= 1.23.1"
pysam = ">= 0.19.1"
click = ">= 8.1.3"
pybedtools = ">= 0.9.0"
pyBigWig = ">= 0.3.18"
h5py = ">= 3.9.0"
pandas = ">= 2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastocc = "fastocc.fastocc:fastocc"

